# twitch-irc

./: .gitignore  Main.hs  README.md  cabal.config  twitch-hs.cabal  twitch-irc.cabal
Irc/: Client.hs  Parser.hs
app/: Main.hs
script_examples/: basic.hs
scripts/Echo/: Main.hs
scripts/HelloWorld/: Main.hs
scripts/Websocket/: Main.hs
scripts/X11/: Main.hs  X11.hs  x11wrapper.c
src/: Twitch.hs
src/Irc/: Twitch.hs
src/Twitch/Irc/: Client.hs  Constants.hs  Parser.hs  Types.hs
