name:                twitch-hs
version:             0.1.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Globidev/twitch-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Guillaume Depardon
maintainer:          guillaume.depardon@outlook.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Twitch
  other-modules:       Twitch.Irc.Client
                     , Twitch.Irc.Constants
                     , Twitch.Irc.Parser
                     , Twitch.Irc.Types
  build-depends:       base
                     , network
                     , parsec
  default-language:    Haskell2010

executable twitch-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-hs
                     , process
  default-language:    Haskell2010

executable twitch-echo
  hs-source-dirs:      scripts/Echo
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-hs
  default-language:    Haskell2010

executable twitch-x11
  hs-source-dirs:      scripts/X11
  main-is:             Main.hs
  other-modules:       X11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-hs
                     , containers
  extra-libraries:     X11
  default-language:    Haskell2010
  c-sources:           scripts/X11/x11wrapper.c

executable twitch-websocket
  hs-source-dirs:      scripts/Websocket
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-hs
                     , websockets
                     , text
                     , aeson
                     , stm
  default-language:    Haskell2010

test-suite twitch-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twitch-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Globidev/twitch-hs
