name:                twitch-irc
version:             0.1
homepage:            http://github.com/Globidev/twitch-irc#readme
license:             MIT
license-file:        LICENSE
author:              Guillaume Depardon
maintainer:          guillaume.depardon@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Twitch
  other-modules:       Twitch.Irc.Client
                     , Twitch.Irc.Constants
                     , Twitch.Irc.Parser
                     , Twitch.Irc.Types
  build-depends:       base
                     , network
                     , parsec
                     , containers
  default-language:    Haskell2010

executable twitch-irc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-irc
                     , process
  default-language:    Haskell2010

executable twitch-irc-echo
  hs-source-dirs:      scripts/Echo
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-irc
  default-language:    Haskell2010

executable twitch-irc-x11
  hs-source-dirs:      scripts/X11
  main-is:             Main.hs
  other-modules:       X11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-irc
                     , containers
  extra-libraries:     X11
  default-language:    Haskell2010
  c-sources:           scripts/X11/x11wrapper.c

executable twitch-irc-websocket
  hs-source-dirs:      scripts/Websocket
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitch-irc
                     , websockets
                     , aeson
                     , bytestring
  default-language:    Haskell2010

test-suite twitch-irc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twitch-irc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Globidev/twitch-irc
